# mamediff

./: .uribo  Cargo.toml  README.md
.github/workflows/: release.yml
configs/: default.jsonc  sile.jsonc
src/: action.rs  app.rs  canvas.rs  diff.rs  git.rs  lib.rs  main.rs  terminal.rs  widget_diff_tree.rs  widget_legend.rs
