[package]
name = "mamediff"
version = "0.4.0"
edition = "2024"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "A TUI editor for managing unstaged and staged Git diffs"
homepage = "https://github.com/sile/mamediff"
repository = "https://github.com/sile/mamediff"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
mame = "0.1.5"
noargs = "0.4.1"
nojson = "0.3.4"
orfail = "1.1.0"
tuinix = "0.3.2"

[dev-dependencies]
tempfile = "3.15.0"
